--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,13 @@
   box-sizing: border-box;
 }
 
-
+html{
+  scroll-behavior:smooth;
+}
 
 body{
   font-family: 'Roboto', sans-serif;
-  scroll-behavior:smooth;
+  
   height: auto;
 }
 
@@ -55,9 +57,21 @@ nav ul li{
   border-radius: 50%;
   padding: 25px;
   margin: 10px;
+  font-size: 20px;
+  box-shadow: 5px rgb(86, 90, 90);
 
 }
+
+.box{
+  width: 100%;
+  height: 300px;
+  background-color: cyan;
+
+}
+
+
   
+
   
 
 
