--- a/css/style.css
+++ b/css/style.css
@@ -63,15 +63,59 @@ nav ul li{
 }
 
 .box{
-  width: 100%;
-  height: 300px;
-  background-color: cyan;
+ 
+  height: 100vh;
+}
 
+.box-red{
+  background-color: red;
+}
+
+.box-green {
+  background-color: green;
+}
+ 
+.box-yellow{
+  background-color: yellow;
+}
+
+  
+.layover{
+  height: 100%;
+  position: relative;
+ 
+  
+  
+}
+
+.layover h1{
+  
+  color: yellow;
+  text-transform: uppercase;
+ 
 }
 
 
+
+
+#adidas {
+ 
+  /* background-image: url("../img/01.png");
+  background-size: contain;
+} */
+  
+  
+
+
+
   
 
   
+  
+
+
+
+  
+
 
 
