--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ nav ul li{
 
 .box{
  
-  height: 100vh;
+  height: 150vh;
 }
 
 .box-red{
@@ -106,11 +106,19 @@ nav ul li{
 
 
 
-#adidas {
- 
-  /* background-image: url("../img/01.png");
-  background-size: contain;
-} */
+#adidas img  {
+  width: 300px;
+  height: 250px;
+  position: absolute;
+  /* top: 50%; */
+  left: 50%;
+  top: 20%;
+  transform: translate(-50%);
+  margin-bottom: 100px;
+
+
+  
+}
   
   
 
