--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,19 @@ nav ul li{
 
   
 }
+
+#tommy img{
+  width: 300px;
+  height: 250px;
+  position: absolute;
+  /* top: 50%; */
+  left: 50%;
+  top: 20%;
+  transform: translate(-50%);
+  margin-bottom: 100px;
+
+
+}
   
   
 
